--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'AP'
 - !lcsh 'Periodicals'
+- GITenberg
 title: Vasárnapi Könyv. 1914. Első félév 17. füzet
 url: http://www.gutenberg.org/ebooks/34726
